spacing fix

--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ body {
 }
 
 .details > * {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
+  padding: 0 30px;
 }
 
 .details > iframe {
